--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "canvas": "^3.2.0",
     "geolib": "^3.3.4",
     "leaflet": "^1.9.4",
     "next": "^16.0.7",
